# async-graphql-poc

./: Cargo.toml  Procfile  README.md  Rocket.toml
.github/workflows/: deploy_docs.yml
cicd/: Dockerfile  docker-compose.yml
docs/: README.md  SUMMARY.md  book.toml  schema.md  welcome.md
docs/architecture/: README.md
src/: database.rs  main.rs  routes.rs  schema.rs  schemas.rs
src/database/: human.rs  user.rs
src/models/: human.rs  user.rs
src/schema/: humans.rs  users.rs
src/schemas/: humans.rs  truth.rs
