[package]
name = "nft-backend"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper" }


[dev-dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["expose-test-schema"] }