[package]
name = "nft-backend"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2" }
juniper = { version = "0.15.3" }
juniper_actix = { version = "0.2.3" }


