[package]
name = "backend"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2", features = [ "rustls" ] }
async-graphql = { version = "2.5.13" }
async-graphql-actix-web = { version = "2.5.13" }
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-rustls"] }
anyhow = { version = "1.0.38" }